[build-system]
requires = ["setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "jaxrk"
description = "JaxRK is a library for working with (vectors of) RKHS elements and RKHS operators using JAX for automatic differentiation."
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["one", "two"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
        "jax",
        "numpy",
        "scipy",
        "matplotlib",
        "flax",
        "optax",
        "jaxopt",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-html", "pytest-cov[all]", "interrogate"]
lint = ["black"]
ci = ["pytest", "pytest-html", "pytest-cov", "interrogate", "black"]

#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
